[package]
name = "perlin-noise"
version = "0.1.0"
authors = ["SamuelWhittle <swbnp7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
twox-hash = "1.6.3"
rand = "0.8.5"

[profile.release]
opt-level = "s"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0
panic = 'abort'
