[package]
name = "perlin-noise"
version = "0.1.0"
authors = ["SamuelWhittle <swbnp7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
twox-hash = "1.6.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true

