[package]
name = "perlin-noise"
version = "0.1.0"
authors = ["SamuelWhittle <swbnp7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.6", optional = true }
twox-hash = "1.6.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlInputElement',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'MessageEvent',
    'Window',
    'Worker',
]
